// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="issue-message"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</div>
`;

exports[`should render correctly: is manual vulnerability 1`] = `
<div
  className="issue-message"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <Tooltip
    overlay="issue.manual_vulnerability.description"
  >
    <div
      className="badge spacer-right text-top"
    >
      issue.manual_vulnerability
    </div>
  </Tooltip>
</div>
`;

exports[`should render correctly: with engine info 1`] = `
<div
  className="issue-message"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <Tooltip
    overlay="issue.from_external_rule_engine.js"
  >
    <div
      className="badge spacer-right text-top"
    >
      js
    </div>
  </Tooltip>
</div>
`;
